<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_message">Hello World!!</string>
    <string name="GUI">Look at my GUI:</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="click">Click Here</string>
    <string name="checkThisOut">Check This Out</string>
    <string name="typeHint">Type Here</string>
    <string name="switchOnOff">Switch On/Off</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_message_on">The switch is now on</string>
    <string name="snackbar_message_off">The switch is now off</string>
    <string name="type_here">Type Email here</string>
    <string name="login">LOGIN</string>
    <string name="enter_email">Enter your Email address</string>
    <string name="enter_pw">Type your password</string>
    <string name="profile_header">Your Profile</string>
    <string name="your_name">Your Nama:</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="your_pic">Your picture</string>
    <string name="go_to_chat_room">Chat Room</string>
    <string name="type_message">Type Here</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="currentTemp">Current Temperature</string>
    <string name="minTemp">Minimun Temperature</string>
    <string name="maxTemp">Maximum Temperature</string>
    <string name="UVRating">UV Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_here_fragment">Message Here</string>
    <string name="isSendMessage">is a Send Message</string>
    <string name="hide">HIDE</string>
</resources>