<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GUI"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btClick"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/click"
            />
        <CheckBox
            android:id="@+id/cbCheck"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/checkThisOut"
            />
    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageButton
            android:id="@+id/ibtFlag"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:src="@drawable/flag"
            />

        <Switch
            android:id="@+id/sw"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/switchOnOff"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/typeHint"
        android:inputType="textPersonName"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Linear Layout"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>