<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ChatRoomActivity"
    android:orientation="horizontal">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/send"
        />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:id="@+id/message_to_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_message"
            android:inputType="text"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/receive"
            android:layout_toRightOf="@id/send"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>


</RelativeLayout>
