<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textSize="25sp"
            android:layout_gravity="center"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/address"
            android:hint="@string/type_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:nextFocusDown="@+id/item1"
            android:nextFocusUp="@+id/item2"
            android:nextFocusRight="@+id/item3"
            android:nextFocusLeft="@+id/item4"/>
        <TextView
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pw"
            android:textSize="25sp"
            android:layout_gravity="center"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:nextFocusDown="@+id/item1"
            android:nextFocusUp="@+id/item2"
            android:nextFocusRight="@+id/item3"
            android:nextFocusLeft="@+id/item4"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:textSize="25sp"
            android:nextFocusDown="@+id/item1"
            android:nextFocusUp="@+id/item2"
            android:nextFocusRight="@+id/item3"
            android:nextFocusLeft="@+id/item4"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>